--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -9,6 +9,15 @@ h4 {
   box-sizing: border-box;
 }
 
+body {
+  font-family: var(--font-primary);
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--gray-dark);
+  margin: 0;
+  background-color: var(--white);
+}
+
 ul{
   list-style: none;
   padding-left: 0;
@@ -23,4 +32,11 @@ a {
 
 img{
   max-width: 100%;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
