--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,4 @@
+/* xs mixin for extra small devices */
 @mixin xs {
   @media (max-width: 576px) {
     @content;
@@ -9,8 +10,6 @@
     @content;
   }
 }
-
-
 @mixin md {
   @media (min-width: 769px) and (max-width: 992px) {
     @content;
@@ -24,7 +23,44 @@
 }
 
 @mixin xl {
-  @media (min-width: 1200px) {
+  @media (min-width: 1201px) {
     @content;
   }
+}
+
+
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+@mixin flex-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@mixin flex-evenly {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
