--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,23 +1,45 @@
-// Couleurs principales
-$white: #FFFFFF;
-$black: #000000;
-$blue-primary: #007B9A;
-$blue-secondary: #0A819B;
-$gray-light: #E0E0E0;
-$gray-medium: #CCCCCC;
-$gray-dark: #333333;
+
+
+
+:root {// Couleurs principales
+--white: #FFFFFF;
+--black: #000000;
+--blue-primary: #007B9A;
+--blue-secondary: #0A819B;
+--gray-light: #E0E0E0;
+--gray-medium: #CCCCCC;
+--gray-dark: #333333;
 
 // Autres nuances utilisées
-$blue-accent-1: #0D6377;
-$blue-accent-2: #0F95A4;
-$blue-accent-3: #117E88;
-$blue-accent-4: #11B6CA;
-$blue-accent-5: #129FB1;
-$blue-accent-6: #69C7D3;
+--blue-accent-1: #0D6377;
+--blue-accent-2: #0F95A4;
+--blue-accent-3: #117E88;
+--blue-accent-4: #11B6CA;
+--blue-accent-5: #129FB1;
+--blue-accent-6: #69C7D3;
 
 // Transparence (si applicable, précise ton usage)
-$black-opacity-17: rgba(0, 0, 0, 0.17);
-$black-opacity-19: rgba(0, 0, 0, 0.19);
+--black-opacity-17: rgba(0, 0, 0, 0.17);
+--black-opacity-19: rgba(0, 0, 0, 0.19);
 
+//Polices
 
-//police
+//Police par défaut
+--font-primary: 'Lato', sans-serif; /* Police par défaut */
+--font-primary-light: 'Lato', sans-serif; /* Poids léger */
+--font-primary-light-italic: 'Lato', sans-serif; /* Poids léger, italique */
+--font-primary-regular: 'Lato', sans-serif; /* Poids normal */
+--font-primary-bold: 'Lato', sans-serif; /* Poids gras */
+--font-primary-bold-italic: 'Lato', sans-serif; /* Poids gras, italique */
+
+//Police titres et citations
+--font-secondary: 'Playfair Display', serif; /* Police secondaire */
+--font-secondary-regular: 'Playfair Display', serif; /* Normal */
+--font-secondary-italic: 'Playfair Display', serif; /* Italique */
+--font-secondary-bold: 'Playfair Display', serif; /* Gras */
+--font-secondary-bold-italic: 'Playfair Display', serif; /* Gras et italique */
+
+//Police manuscrite
+--font-accent: 'Dancing Script', cursive; /* Police accentuée */
+
+}
