--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -5,8 +5,9 @@ h4 {
   margin: 0;
 }
 
-* {
+*, ::after, ::before {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 }
 
 main{
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 ul{
