--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,16 +1,17 @@
 footer {
   background: var(--blue-accent-1);
   color: var(--white);
-  padding: 5px 30px;
+  padding: 30px;
   font-size: 12px;
   background: rgb(12, 173, 161);
   background: linear-gradient(212deg, rgba(12, 173, 161, 1) 30%, rgba(12, 148, 138, 0.9831168356906163) 48%, rgba(14, 124, 139, 1) 78%);
   border-top: 0.5px solid var(--blue-accent-1);
+  width: 100vw;
 
   .footer-top {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start; /* Ajuste pour mieux aligner */
+    justify-content: space-evenly;
+    align-items: flex-start;
     gap: 20px;
     width: 100%;
     margin-bottom: 20px;
@@ -53,9 +54,11 @@ footer {
       justify-content: center; /* Centre horizontalement */
       align-items: center; /* Centre verticalement */
       margin: auto;
+      width: 100%;
+      height: 100%;
     
       img {
-        max-width: 150px;
+        width: 180px;
         height: auto;
       }
     
@@ -64,15 +67,20 @@ footer {
       }
     }
 
+
   .footer-social {
+    width: 100%;
+
     ul {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 15px;
 
       @media (max-width: 768px) {
         flex-direction: row; /* Garde les icônes en ligne sur mobile */
         margin-top: 10px;
+        margin-left: 0;
+        justify-self: center;
       }
 
       li {
@@ -97,4 +105,8 @@ footer {
       font-size: 12px;
     }
   }
+}
+
+.footer-nav, .footer-contact{
+  width: 100%;
 }
