--- a/assets/scss/components/film-card.scss
+++ b/assets/scss/components/film-card.scss
@@ -1,84 +1,57 @@
 .film-card{
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-    width: 45%;
-    height: auto;
-    padding: 1rem;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
-    cursor: pointer;
-    margin: 60px auto;
-    &:hover{
-        transform: translateY(-5px);
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    }
-    .film-card__wrapper{
-      display: flex;
-      align-items: start;
+  max-width: 550px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 12px;
+}
 
-      .film-card__image{
-        width: 250px; // Ajuste selon tes besoins
-        
-        img{
-          width: 100%;
-          object-position: center;
-          object-fit: fill;
-        }
-      }
-      .film-card__title{
-        margin-top: 1rem;
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #333;
-      }
-      .film-card__description{
-        margin-top: 1rem;
-        font-size: 1rem;
-        color: #666;
-      }
-    }
-    .film-card__cta{
-      position: relative;
-      display: flex;
-      justify-content: space-around;
-      align-items: end;
-      width: 100%;
-      margin: 20px;
-
-      a{
-        padding: 0.5rem 1rem;
-        margin-top: auto;
-        border-radius: 0.5rem;
-        font-size: 1rem;
-        font-weight: 700;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        background: rgb(12, 173, 161);
-        background: linear-gradient(212deg, rgba(12, 173, 161, 1) 30%, rgba(12, 148, 138, 0.9831168356906163) 48%, rgba(14, 124, 139, 1) 78%);
-        font-family: var(--font-secondary);
-        color: var(--white);
-
-        &:hover{
-          transform: scale(1.1);
-        }
-      }
-
-    }
+.film-card__wrapper{
+  display: flex;
+  justify-content: start;
+  align-items: start;
 }
 
 .film-card__details{
-  width: 50%;
-  top: 0;
-  margin-left: 5px;
+  margin-left: 20px;
 }
 
-.film-card__content{
+.film-card__cta{
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+  padding: 12px 0;
 
-  ul{
-    display: flex;
+  a{
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: rgb(12,173,161);
+    background: linear-gradient(212deg, rgba(12,173,161,1) 30%, rgba(12,148,138,0.9831168356906163) 48%, rgba(14,124,139,1) 78%);
+    width: 150px;
+    padding: 5px 7px;
+    text-align: center;
+    color: var(--white);
   }
+}
+
+.film-card__image{
+  width: 100%;
+
+  img{
+    width: 100%;
+  }
+}
+
+.film-card__details{
+  width: 75%;
+}
+
+.film-card__content {
+  p{
+    color: var(--gray-dark);
+  }
+  h3{
+    color: var(--blue-primary);
+    margin-top: 20px
+  }
+
 }
