--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -1,6 +1,3 @@
-// .homepage{
-
-// }
 .carrousel {
   width: 100vw;
   height: 84vh;
@@ -20,7 +17,8 @@
   @media (max-width: 768px){
     flex-direction: column;
   }
-}
+  }
+
 
 .photo img {
   border-radius: 50%;
@@ -39,7 +37,7 @@
     color: var(--gray-dark);
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     font-size: 1.2rem;
     cursor: pointer;
     opacity: 0.8;
@@ -73,6 +71,22 @@ h2{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100vw;
+  padding-bottom: 60px;
+
+  @media (max-width: 768px){
+    grid-template-columns: 1fr;
+  }
+  hr{
+    width: 75%;
+    border: 1px solid var(--gray-dark);
+    display: none;
+    opacity: 0.5;
+    margin-top: 25px;
+
+    @media (max-width: 768px){
+      display: block;
+  }
+}
 }
 
 .impact-items{
@@ -82,7 +96,7 @@ h2{
   width: 100%;
   color: rgb(12, 173, 161);
   text-align: center;
-  height: auto;
+  height: 220px;
   font-size: 18px;
 
   .impact-icon{
@@ -102,35 +116,48 @@ h2{
 
 }
 
-
-.partners{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.partners-container {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  width: 100vw;
+  flex-wrap: wrap-reverse;
   padding: 60px;
+  width: 100vw;
+  gap: 20px;
+}
 
-  .partners-text{
-    box-shadow: 0 0 5px var(--gray-dark);
-    padding: 15px;
+.partners-text {
+  box-shadow: 0 0 5px var(--gray-dark);
+  padding: 15px;
+  width: 50%;
+
+  @media (max-width: 768px) {
+    text-align: center; 
+    width: 100%;
+  }
+}
+
+.partners-img-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  @media (max-width: 768px) {
+    justify-content: center;
+    padding-bottom: 20px;
+    width: 100%;
   }
 
-  .partners-img-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-
-    .partners-img{
-      width: 400px;
-      height: 410px;
-      border: 5px solid var(--gray-dark);
+  .partners-img {
+    img {
       box-shadow: 0 0 5px var(--gray-dark);
-      margin-left: 50px;
-  
-      img{
-        box-shadow: 0 0 5px var(--gray-dark);
-      }
+      border: 5px solid var(--gray-dark);
+      height: auto;
+    }
+    figcaption{
+      font-size: 14px;
+      opacity: 0.8;
     }
   }
 }
+
