--- a/assets/scss/components/film-card.scss
+++ b/assets/scss/components/film-card.scss
@@ -21,6 +21,11 @@
   align-items: end;
   padding: 12px 0;
 
+  @media (max-width: 550px){
+    flex-direction: column;
+    align-items: center;
+  }
+
   a{
     border-radius: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -30,6 +35,10 @@
     padding: 5px 7px;
     text-align: center;
     color: var(--white);
+
+    @media (max-width: 550px){
+      margin-top: 10px;
+    }
   }
 }
 
