--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -81,7 +81,7 @@ h2{
     border: 1px solid var(--gray-dark);
     display: none;
     opacity: 0.5;
-    margin-top: 25px;
+    margin: 25px auto 0 auto;
 
     @media (max-width: 768px){
       display: block;
