--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -46,3 +46,25 @@ img{
   margin: 0 auto;
   padding: 0 20px;
 }
+
+figcaption {
+  font-size: 0.8em;
+  color: var(--gray-dark);
+  text-align: left;
+  margin-left: 7px;
+}
+
+.section-title {
+  text-align: center;
+  width: 100%;
+  margin-bottom: 30px;
+  background: rgb(12, 173, 161);
+  background: linear-gradient(212deg, rgba(12, 173, 161, 1) 30%, rgba(12, 148, 138, 0.9831168356906163) 48%, rgba(14, 124, 139, 1) 78%);
+  font-family: var(--font-secondary);
+  color: var(--white);
+  padding: 45px;
+}
+
+p{
+  font-family: var(--font-primary);
+}
