--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -71,7 +71,7 @@
 }
 .bio-content {
   position: relative;
-  padding: 40px 80px;
+  padding: 0px 80px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -80,35 +80,21 @@
 
   @media (max-width: 768px){
     flex-direction: column;
-    padding: 40px 20px;
     justify-content: center;
     align-items: center;
   }
-}
-
-.img-fixed-container {
-  width: 40%;
-  max-width: 400px;
-  position: relative;
-
-  @media (max-width: 768px){
-    margin-bottom: 20px;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-}
-
-.img-content {
-  position: sticky;
-  top: 20px; /* Garder une marge par rapport au haut */
-  height: auto;
 }
 
 .bio-txt {
   width: 55%;
   margin-left: 20px;
-  min-height: 120vh; /* Augmente la hauteur pour s'assurer qu'on peut scroller */
+  padding-bottom: 40px; /* Augmente la hauteur pour s'assurer qu'on peut scroller */
+
+  @media (max-width: 768px){
+    width: 100%;
+    margin-left: 0;
+    margin-top: 20px;
+  }
 
   p {
     text-align: justify;
