--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -3,6 +3,7 @@
   max-height: 430px;
   width: 100vw;
   margin-bottom: 30px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 
   @media (max-width: 430px){
     margin-bottom: 50px;
@@ -189,4 +190,135 @@
 
 .overlay.visible {
   display: block;
+}
+
+
+/* Style pour la section about */
+
+.film-maker__about{
+
+  color: #0a0a0a;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px;
+  border-radius: 7px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+
+  @media (max-width: 1215px){
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  h2{
+    text-align: center;
+    font-family: var(--font-accent);
+    font-size: 2rem;
+    padding: 10px 0;
+    margin: auto;
+    width: 180px;
+    @media (max-width: 1215px){
+      width: 80%;
+    }
+  }
+
+  .film-maker__about_content{
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+
+    @media (max-width: 1000px){
+      display: grid;
+      grid-template-columns: repeat(2, 2fr);
+      width: 100%;
+    }
+
+    @media (max-width: 820px){
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+      p{
+    text-align: left;
+    font-size: 18px;
+    font-family: var(--font-primary-regular);
+    padding: 12px;
+    opacity: 0.9;
+    border-radius: 8px;
+    background: linear-gradient(to bottom, rgba(4, 150, 247, 0.2), rgba(3, 141, 234, 0.6));
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    width: 250px;
+
+    @media (max-width: 1000px){
+      width: 100%;
+    }
+
+    @media (max-width: 820px){
+      font-size: 14px;
+    }
+
+  }
+  }
+
+}
+
+
+.article-container{
+  display: flex;
+  padding: 40px;
+}
+
+.article-content{
+  h3{
+    font-family: var(--font-secondary-bold);
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+
+
+.article-content_txt{
+  display: flex;
+}
+
+.article-content_txt_left{
+  text-align: justify;
+  margin: 5px 10px 0px 0px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article__img{
+  width: 300px;
+  height: 390px;
+  object-fit: cover;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+  margin: 0 15px 15px 0;
+}
+
+.icon_camera_puce{
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  margin: 3px;
+}
+
+.article__aside_txt{
+  font-size: 18px;
+  font-family: var(--font-primary-regular);
+  text-align: justify;
+  padding: 20px;
+  opacity: 0.9;
+  border-radius: 8px;
+  background: linear-gradient(to bottom, rgba(4, 247, 186, 0.2), rgba(11, 218, 42, 0.6));
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  margin-top: 15px;
+  ul{
+    list-style-type:square;
+    margin-left: 22px;
+  }
 }
