--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -266,9 +266,11 @@
 .article-container{
   display: flex;
   padding: 40px;
+  justify-content: center;
 }
 
 .article-content{
+  max-width: 45%;
   h3{
     font-family: var(--font-secondary-bold);
     font-size: 1.5rem;
@@ -284,20 +286,31 @@
 
 .article-content_txt_left{
   text-align: justify;
-  margin: 5px 10px 0px 0px;
-  font-size: 20px;
+  font-size: clamp(1rem, 2vw, 1rem);
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding: 0px 20px;
+  min-width: 40%;
 }
 
 .article__img{
-  width: 300px;
-  height: 390px;
+  max-width: 100%;
+  height: auto;
+  // max-height: 390px;
+  // min-width: 250px;
+  // min-height: 340px;
   object-fit: cover;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   margin: 0 15px 15px 0;
+  display: flex;
+
+  img{
+    display: flex;
+    max-width: 100%;
+    height: 100%;
+    border-radius: 3px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .icon_camera_puce{
@@ -309,14 +322,15 @@
 .article__aside_txt{
   font-size: 18px;
   font-family: var(--font-primary-regular);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   text-align: justify;
   padding: 20px;
   opacity: 0.9;
   border-radius: 8px;
   background: linear-gradient(to bottom, rgba(4, 247, 186, 0.2), rgba(11, 218, 42, 0.6));
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  width: 80%;
-  margin-top: 15px;
+  width: 100%;
+  margin: 20px;
   ul{
     list-style-type:square;
     margin-left: 22px;
