--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -157,3 +157,45 @@ cite{
   }
 }
 
+.img-fixed-container {
+  width: 50%;
+  max-width: 500px;
+  position: relative;
+  max-height: 400px;
+  margin: 0px auto 20px auto;
+
+  @media (max-width: 768px){
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.img-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (max-width: 768px) {
+    width: 80%;
+    margin: auto;
+  }
+}
+
+.imgSticky {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 5px;
+  opacity: 0.8;
+}
+
