--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -230,13 +230,10 @@
 
     @media (max-width: 1000px){
       display: grid;
-      grid-template-columns: repeat(2, 2fr);
+      grid-template-columns: repeat(1, 1fr);
       width: 100%;
     }
 
-    @media (max-width: 820px){
-      grid-template-columns: repeat(1, 1fr);
-    }
 
       p{
     text-align: left;
@@ -259,59 +256,55 @@
 
   }
   }
+}
 
+.article{
+  h3{
+    font-family: var(--font-secondary-bold);
+    font-size: clamp(1.5rem, 1vw, 2rem);
+    margin: 20px auto;
+    text-align: center;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+
+  }
 }
 
 
 .article-container{
-  display: flex;
+  position: relative;
   padding: 40px;
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  min-height: 100vh; /* Assurer une hauteur suffisante */
+
+  @media (max-width: 768px){
+    padding: 0px 20px;
+  }
 }
 
 .article-content{
   max-width: 45%;
-  h3{
-    font-family: var(--font-secondary-bold);
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    text-align: center;
+
+  @media (max-width: 768px){
+    max-width: 60%;
   }
 }
 
 
 .article-content_txt{
   display: flex;
-}
-
-.article-content_txt_left{
-  text-align: justify;
-  font-size: clamp(1rem, 2vw, 1rem);
-  display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 0px 20px;
-  min-width: 40%;
+  width: 100%;
+  font-size: clamp(1rem, 1vw, 2rem);
 }
 
-.article__img{
-  max-width: 100%;
-  height: auto;
-  // max-height: 390px;
-  // min-width: 250px;
-  // min-height: 340px;
-  object-fit: cover;
-  margin: 0 15px 15px 0;
-  display: flex;
-
-  img{
-    display: flex;
-    max-width: 100%;
-    height: 100%;
-    border-radius: 3px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  }
-}
 
 .icon_camera_puce{
   border-radius: 50%;
@@ -319,18 +312,18 @@
   margin: 3px;
 }
 
-.article__aside_txt{
-  font-size: 18px;
+aside{
+  font-size: clamp(1rem, 1vw, 2rem);
   font-family: var(--font-primary-regular);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   text-align: justify;
-  padding: 20px;
+  padding: 8px 12px;
   opacity: 0.9;
   border-radius: 8px;
   background: linear-gradient(to bottom, rgba(4, 247, 186, 0.2), rgba(11, 218, 42, 0.6));
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  margin: 20px;
+  width: 80%;
+  margin: 20px auto;
   ul{
     list-style-type:square;
     margin-left: 22px;
