--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -78,6 +78,7 @@
   align-items: flex-start;
   width: 100%;
   min-height: 100vh; /* Assurer une hauteur suffisante */
+  gap: 20px;
 
   @media (max-width: 768px){
     flex-direction: column;
