--- a/assets/scss/pages/filmMaker.scss
+++ b/assets/scss/pages/filmMaker.scss
@@ -262,9 +262,8 @@
 .article{
   h3{
     font-family: var(--font-secondary-bold);
-    font-size: clamp(1.5rem, 1vw, 2rem);
+    font-size: clamp(1.1rem, 1.5vw, 2rem);
     margin: 20px auto;
-    text-align: center;
     width: 100%;
     padding: 15px;
     text-align: center;
@@ -304,6 +303,7 @@
   padding: 0px 20px;
   width: 100%;
   font-size: clamp(1rem, 1vw, 2rem);
+  text-align: justify;
 }
 
 
